--- a/wordpress/wp-content/themes/ripple/assets/less/wordpress.less
+++ b/wordpress/wp-content/themes/ripple/assets/less/wordpress.less
@@ -1298,6 +1298,9 @@ nav.header-navigation ul li a {
 .news .post-thumbnail img {
     margin: 0 auto;
 }
+.blog .post-thumbnail img {
+    margin: 0 auto;
+}
  }
  
 /* Landscape phone to portrait tablet */
@@ -1405,6 +1408,9 @@ article.post.single-post {
     width: 90%;
 }
 .news .post-thumbnail img {
+    margin: 0 auto;
+}
+.blog .post-thumbnail img {
     margin: 0 auto;
 }
  }
